# bicyclemeter

ios/: .gitignore  build_rust_deps.sh
ios/bicyclemeter/: BluetoothManager.swift  ContentView.swift  Info.plist  Points.swift  TrackManager.swift  bicyclemeterApp.swift
ios/bicyclemeter.xcodeproj/: project.pbxproj
ios/bicyclemeter/Models/: Error.swift  Peripheral.swift  Track.swift
ios/bicyclemeter/Reax/: Runtime.swift
ios/bicyclemeter/ViewModels/: StorageViewModel.swift  TrackViewModel.swift
ios/bicyclemeter/Views/: CyclingView.swift  DevicesView.swift  HistoryChartView.swift  HistoryView.swift  TrackHistoryView.swift  TrackView.swift  WelcomeView.swift
ios/bicyclemeterTests/: bicyclemeterTests.swift
ios/bicyclemeterUITests/: bicyclemeterUITests.swift  bicyclemeterUITestsLaunchTests.swift
reax/: .gitignore  Cargo.toml
reax/base/: Cargo.toml
reax/base/src/: lib.rs
reax/ios/: Cargo.toml
reax/ios/src/: lib.rs  reax.h  storage.rs
reax/storage/: Cargo.toml
reax/storage/src/: lib.rs  models.rs  track.rs
sensor/: sensor.ino
sensor/esp32/: esp32.ino  sample.h
