[package]
name = "ios"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
storage = { path = "../storage" }

log.workspace = true
env_logger = "0.10.0"

once_cell.workspace = true
bincode.workspace = true
serde = { workspace = true, features = ["derive"] }
sled.workspace = true
tokio.workspace = true


[lib]
name = "reax"
crate-type= ["staticlib"]
